--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -657,7 +657,7 @@
         <div id="body-center" style="width:600px; height:780px; position: relative; overflow: hidden;">
             <div id="moduleShadow" style="position: absolute; left:150px; top:20px;"><img src="module-shadow.svg"></img>
             </div>
-            <div id="moduleNum" style="color:white">QWR</div>
+            <div id="moduleNum" style="color:white">1</div>
         </div>
 
         <!-- Right -->
