--- a/raon-control/main.html
+++ b/raon-control/main.html
@@ -665,9 +665,18 @@
             <div class="body-right-grid">
                 <div class="grid-item" style="width:620px; height:160px; grid-column: 1/3; grid-row: 1/2;">
                 </div>
-
-                <div class="grid-item" style="width:300px; height:160px;">
-
+                <div class="grid-item" style="display:flex; width:300px; height:160px;">
+                    <div style="width:70%; height:100%">
+                        <div class="data-name" style="position: relative; left: 25px; top:25px">Power</div>
+                        <div class="data-value" style="position: relative; left: 25px; top:40px">3000 KV</div>
+                    </div>
+                    <div style="width:30%; height:100%;">
+                        <svg class="lightning" width="59.63" height="103.33">
+                            <polygon
+                                points="58.67 0.5 18.67 0.5 6.67 40.5 0.67 60.5 16.67 60.5 4.67 100.5 32.67 60.5 46.67 40.5 30.67 40.5 58.67 0.5"
+                                style="fill:#2959a8;stroke:#1e417d;stroke-miterlimit:10" />
+                        </svg>
+                    </div>
                 </div>
 
                 <div class="grid-item" style="width:300px; height:160px;">
